--- a/qimgv/res/theme-presets/theme-light.conf
+++ b/qimgv/res/theme-presets/theme-light.conf
@@ -1,13 +1,13 @@
 [Colors]
-accent=#7baad6
+accent=#32587d
 background=#1b1b1c
 background_fullscreen=#1b1b1c
-folderview=#fbfbfb
-folderview_panel=#fbfbfb
-folderview_topbar=#c7c7c8
+folderview=#2f2f30
+folderview_panel=#373738
+folderview_topbar=#252526
 overlay=#1a1a1b
 overlay_text=#d2d2d2
-slider_handle=#6a6c6e
-text=#232627
-widget=#ebebec
-widget_border=#b0b0b1
+slider_handle=#5c5e60
+text=#9c9ea0
+widget=#232324
+widget_border=#232324
