--- a/qimgv/res/theme-presets/theme-light.conf
+++ b/qimgv/res/theme-presets/theme-light.conf
@@ -1,6 +1,6 @@
 [Colors]
 accent=#32587d
-background=#1b1b1c
+background=#1a1a1a
 background_fullscreen=#1b1b1c
 folderview=#2f2f30
 folderview_panel=#373738
